# causal-graph-engine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATE.md  main.py  pyproject.toml
agents/: __init__.py
config/: drug_target_registry.py  scoring_thresholds.py
data/: analyze_coronary_artery_disease.md  analyze_rheumatoid_arthritis.json  analyze_rheumatoid_arthritis.md
docs/: DATA_SOURCES.md  GPS_ALGORITHM.md  METHODS.md  OTA_ALGORITHM.md  OUTPUT_SCHEMA.md  RUNTIME.md  agent_enhancement_plan.md  agentic_pipeline_design.md
frozen/: CAD_program_taus.json  CAD_programs.json  RA_program_taus.json  RA_programs.json  hgnc_complete.meta.json
graph/: __init__.py  db.py  export.py  ingestion.py  schema.py  state_schema.py  update_pipeline.py  validation.py  versioning.py  visualize.py
mcp_servers/: burden_perturb_server.py  chemistry_server.py  clinical_trials_server.py  eqtl_catalogue_server.py  finngen_server.py  gps_server.py  graph_db_server.py  gwas_genetics_server.py  lincs_server.py  literature_server.py  open_targets_server.py  pathways_kg_server.py  perturbseq_server.py  phenoscanner_server.py  reactome_server.py  single_cell_server.py  tahoe_server.py  ukb_wes_server.py  viral_somatic_server.py
models/: __init__.py  disease_registry.py  evidence.py  latent_mediator.py
orchestrator/: __init__.py  agent_messages.py  agent_runner.py  chief_of_staff.py  contradiction_agent.py  execution_tools.py  message_contracts.py  pi_orchestrator.py  pi_orchestrator_v2.py  scientific_reviewer.py
outputs/: anchor_clusters_cad.json  anchor_clusters_ra.json  anchor_discovery.py  methods_v5.md  plot_beta_heatmap.py  plot_gps_selection.py  plot_long_island.py
pipelines/: __init__.py  _deprecated_synthetic_programs.py  api_cache.py  biopath_gnn.py  biopath_gnn_v2.py  causal_construction.py  cnmf_programs.py  counterfactual.py  evidence_disagreement.py  evidence_landscape.py  genetic_nmf.py  gps_convergence.py  gps_disease_screen.py  gps_screen.py  gps_transcriptional_convergence.py  inspre_structure.py  mr_analysis.py  ota_beta_estimation.py  ota_gamma_estimation.py  perturbseq_beta_loader.py  polybic_filter.py  program_annotator.py  program_clustering.py  replogle_parser.py  scone_sensitivity.py  sensitivity_analysis.py  shet_loader.py  smr_heidi.py  static_lookups.py  twmr.py  upstream_recovery_benchmark.py  viral_extraction.py  (+1 more)
(+245 files in other folders)
