[project]
name = "causal-graph-engine"
version = "0.2.3"
description = "Multiagent genomics pipeline for causal drug target discovery using the Ota et al. causal-effect decomposition (γ = Σ β×γ)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Kenneth Pham"}]
keywords = ["genomics", "drug discovery", "causal inference", "GWAS", "CRISPR", "Perturb-seq", "single-cell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.11"

dependencies = [
    # Orchestration (anthropic SDK optional — only needed for AGENT_MODE=sdk)
    "fastmcp>=2.0.0",

    # Graph database
    "kuzu>=0.7.0",

    # Schema / validation
    "pydantic>=2.5.0",

    # Data access
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # Statistics
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # Visualization
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",

    # Env
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
agentic = [
    "anthropic>=0.40.0",
]
bio = [
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "cellxgene-census>=1.14.0",
    "pysam>=0.22.0",
    "biocypher>=0.5.0",
    "linkml>=1.7.0",
    "dvc>=3.40.0",
    "rpy2>=3.5.0",
    "causal-learn>=0.1.3.8",
    "sensemakr>=0.1.4",
    "cnmf>=1.5.0",
    "scvi-tools>=1.1.0",
]
chem = [
    "chembl-webresource-client>=0.10.9",
    "rdkit>=2023.9.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live HTTP calls to external APIs (GWAS Catalog, gnomAD, GTEx)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line length handled separately

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = true
